kubernetes/applications/unifi/unifi/lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-lan
  namespace: unifi
  annotations:
    lbipam.cilium.io/ips: "192.168.12.103"
    external-dns.alpha.kubernetes.io/hostname: unifi-controller.prod.everlab.dev

spec:
  type: LoadBalancer

  selector:
    app.kubernetes.io/name: unifi

  ports:
    - name: https
      port: 8443
      targetPort: 8443
      protocol: TCP

    - name: inform
      port: 8080
      targetPort: 8080
      protocol: TCP

    - name: stun
      port: 3478
      targetPort: 3478
      protocol: UDP

    - name: discovery
      port: 10001
      targetPort: 10001
      protocol: UDP

    - name: portal-http
      port: 8880
      targetPort: 8880
      protocol: TCP

    - name: portal-https
      port: 8843
      targetPort: 8843
      protocol: TCP

    - name: speedtest
      port: 6789
      targetPort: 6789
      protocol: TCP

    - name: syslog
      port: 5514
      targetPort: 5514
      protocol: UDP
