kubernetes/applications/unifi/unifi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: unifi
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: unifi

  ports:
    - name: http
      port: 8088
      targetPort: backend-http
      protocol: TCP

    - name: inform
      port: 8080
      targetPort: 8080
      protocol: TCP
