kubernetes/applications/unifi/unifi/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi
  namespace: unifi

spec:
  parentRefs:
    - name: everlab-gateway
      namespace: gateway
      sectionName: https

  hostnames:
    - unifi.prod.everlab.dev

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: unifi
          port: 8088
